2003-05-27  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c, dw2gencfi.h: Rewrite from scratch.
	* as.c (main): Always call cfi_finish.
	* config/tc-i386.c (x86_dwarf2_return_column): New.
	(x86_cie_data_alignment): New.
	(md_begin): Set them.
	(tc_x86_cfi_init): Remove.
	(tc_x86_regname_to_dw2regnum): Fix 32-bit register numbers;
	return int, not unsigned long; don't as_bad here.
	(tc_x86_frame_initial_instructions): Streamline; use
	updated api.
	* config/tc-i386.h (tc_cfi_init): Remove.
	(DWARF2_DEFAULT_RETURN_COLUMN): New.
	(DWARF2_CIE_DATA_ALIGNMENT): New.

2003-05-27  Richard Henderson  <rth@redhat.com>

	* symbols.c (temp_label_name): New.
	(symbol_temp_new, symbol_temp_new_now, symbol_temp_make): New.
	(symbol_set_value_now): New.
	* symbols.h: Prototype them.
	* dwarf2dbg.c: Use them.
	(fake_label_name, symbol_new_now, set_symbol_value_now): Remove.

2003-05-23  Jason Eckhardt  <jle@rice.edu>

	* config/tc-i860.c (target_xp): Declare variable.
	(OPTION_XP): Declare macro.
	(md_longopts): Add option -mxp.
	(md_parse_option): Set target_xp.
	(md_show_usage): Add -mxp usage.
	(i860_process_insn): Recognize XP registers bear, ccr, p0-p3.
	(md_assemble): Don't try expansions if XP_ONLY is set.
	* doc/c-i860.texi: Document -mxp option and i860XP support.

2003-05-23  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c (macro_build_jalr): Warning patrol.

2003-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (append_insn): Use actual relocation size for new
	fixp's.	Don't relax overflow checking for partial_inplace relocations.
	Use the actual relocation type in combined relocs, not just the type
	of the first one.
	(macro_build_jalr): Use actual relocation size for new fix.
	(s_cpsetup, s_gpdword): Likewise.

2003-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro): Don't use uninitialized tempreg.

2003-05-22  Nick Clifton  <nickc@redhat.com>
